# docker-based-practice-setups

./: .gitignore
cuda/: docker-compose.yml
rss-reader/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  compose.yaml  pyproject.toml
rss-reader/app/: cli.py  db.py  feeds.py  main.py
rss-reader/scripts/: harden-host.sh
rss-reader/static/: dashboard.html  dashboard.js  reader.html  reader.js  style.css
rust/: .gitignore  Dockerfile  docker-compose.yml
rust/ex-control-flow/: Cargo.toml
rust/ex-control-flow/src/: main.rs
rust/ex-crates/: Cargo.toml
rust/ex-crates/src/: main.rs
rust/ex-ds/: Cargo.toml
rust/ex-ds/src/: lib.rs  main.rs
rust/ex-enums/: Cargo.toml
rust/ex-enums/src/: lib.rs  main.rs
rust/ex-ownership/: Cargo.toml
rust/ex-ownership-smart-pointers/: Cargo.toml
rust/ex-ownership-smart-pointers/src/: main.rs
rust/ex-ownership/src/: main.rs
rust/exercises/temperature_converter/: Cargo.toml  NOTES.md
rust/exercises/temperature_converter/src/: main.rs
rust/workspace/: Cargo.toml  README.md
rust/workspace/hello/: Cargo.toml
rust/workspace/hello/src/: main.rs
rust/workspace/hellolib/: Cargo.toml
